updated for iOS8+ but still needs a lot of further work to prepare it for sale.

--- a/MyStopMonitor/MyStopMonitor-Info.plist
+++ b/MyStopMonitor/MyStopMonitor-Info.plist
@@ -24,12 +24,20 @@
 	<string>1.0</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This app uses your location to help alert you that your station is approaching soon so you can be ready, we use this data just within the app both while its running and while its in the background. This is needed for the app to function.</string>
+	<key>UILaunchStoryboardName</key>
+	<string>Launch Screen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIStatusBarHidden</key>
+	<true/>
+	<key>UIStatusBarStyle</key>
+	<string>UIStatusBarStyleLightContent</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
